--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "ext-openssl": "*",
         "phan/phan": "*",
         "phpdocumentor/reflection": "^3.0|^5.1",
-        "symfony/phpunit-bridge": "*"
+        "symfony/phpunit-bridge": "*",
+        "phpunit/phpunit": "^10.5"
     }
 }
